syntax = "proto3";

import "google/protobuf/timestamp.proto";

package cartservice;

option java_multiple_files = true;
option java_package = "com.shopic.grpc.cartservice";

message OrderCartInfoGrpcRequest {
  int64 user_id = 1;
}

message OrderCartItem {
  int64 product_id = 1;
  int32 quantity = 2;

}

message OrderCartInfoGrpcResponse {
  repeated OrderCartItem order_cart_items = 1;
}




service CartService {
  rpc getOrderCartInfo(OrderCartInfoGrpcRequest) returns (OrderCartInfoGrpcResponse);
}